[package]
name = "webkit-test"
version = "0.2.0"
edition = "2021"

# TODO: figure out the license
# and publish
license = "LicenseRef-Proprietary" 
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = "0.9.0"
webkit6 = "0.4.0"
